--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #ffe6f0, #ffd6eb);
     text-align: center;
-    touch-action: manipulation;
+    min-height: 100vh;
+    background: linear-gradient(to bottom, #ffe6f0, #ffd6eb);
+    background-attachment: fixed;
 }
 
+
 #startScreen, #finalScreen {
-    position: absolute;
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom, #ffe6f0, #ffd6eb);
@@ -194,4 +195,5 @@ function endGame() {
 
 </body>
 </html>
+
 
